--- a/barra-de-nav.html
+++ b/barra-de-nav.html
@@ -26,14 +26,7 @@
     </nav>
   </header>
   <main>
-    <div class="slider giro">
-      <ul>
-        <li><img src="DXN.jpg" alt=""></li>
-        <li><img src="dxn-logo.png" alt=""></li>
-        <li><img src="FB.jpg" alt=""></li>
-        <li><img src="exito-dxn.jpg" alt=""></li>
-      </ul>
-    </div>
+    <h1> esto es un prueba</h1>
   </main>
 </body>
 </html>
