--- a/nav-contacto.html
+++ b/nav-contacto.html
@@ -18,7 +18,7 @@
       <a href="#" class="logo nav-link"  >Logo</a>
       <button class="nav-toggle" aria-label="Abrir menú"><i class="fas fa-bars"></i></button>
       <ul class="nav-menu ">
-        <li class="nav-menu-item"><a href="barra-de-nav.html" class="nav-menu-link nav-link" >INICIO</a></li>
+        <li class="nav-menu-item"><a href="index.html" class="nav-menu-link nav-link" >INICIO</a></li>
          <li class="nav-menu-item "><a href="#" class="nav-menu-link nav-link">VIDEOS</a></li>
           <li class="nav-menu-item "><a href="#" class="nav-menu-link nav-link">SOBRE NOSOTROS</a></li>
            <li class="nav-menu-item"><a href="nav-contacto.html" class="nav-menu-link nav-link  nav-menu-link_active">CONTACTO</a></li>
