--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Meno de Navegación </title>
+  <title>Menu de Navegación </title>
   <link rel="stylesheet" type="text/css" href="stylr.css">
   <script
       src="https://kit.fontawesome.com/7e5b2d153f.js"
