--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Menu  de Navegación </title>
+  <link rel="icon" href="https://static.wixstatic.com/media/55f2fd_5b10dd857f084219b704d94f707c0bed~mv2_d_3600_3600_s_4_2.jpg/v1/fill/w_236,h_239,al_c,q_80,usm_0.66_1.00_0.01/55f2fd_5b10dd857f084219b704d94f707c0bed~mv2_d_3600_3600_s_4_2.webp"" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="stylr.css">
   <script
       src="https://kit.fontawesome.com/7e5b2d153f.js"
