--- a/nav-contacto.html
+++ b/nav-contacto.html
@@ -53,7 +53,7 @@
     <!-- Contacts section end -->
     
     <div class="copyright">
-        &copy; 2021 DXNTARIJA BY:ADRIAN MARQUEZ. TODO LOS DERECHOS RESERVADOS.
+        &copy; 2021 DXNTARIJA BY:ADRIAN MARQUEZ.
     </div>
   </main>
 </body>
