--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
     </nav>
   </header>
   <main>
-    <h1> esto es un prueba</h1>
+    <div class="slider giro">
+      <ul>
+        <li><img src="DXN.jpg" alt=""></li>
+        <li><img src="dxn-logo.png" alt=""></li>
+        <li><img src="FB.jpg" alt=""></li>
+        <li><img src="exito-dxn.jpg" alt=""></li>
+      </ul>
+    </div>
   </main>
 </body>
 </html>
