--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   <main>
     <div class="slider giro">
       <ul>
-        <li><img src="DXN.jpg" alt=""></li>
-        <li><img src="dxn-logo.png" alt=""></li>
-        <li><img src="FB.jpg" alt=""></li>
-        <li><img src="exito-dxn.jpg" alt=""></li>
+        <li><img src="https://www.dxn2ulatam.com/images/story/FB.jpg" alt=""></li>
+        <li><img src="https://http2.mlstatic.com/D_NQ_NP_931800-MPE41574799297_042020-O.jpg" alt=""></li>
+        <li><img src="https://http2.mlstatic.com/D_NQ_NP_915725-MPE25830875335_082017-O.jpg" alt=""></li>
+        <li><img src="https://www.dxn2ulatam.com/images/bg-header/Ganoderma.jpg" alt=""></li>
       </ul>
     </div>
   </main>
