--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li><img src="https://www.dxn2ulatam.com/images/bg-header/Ganoderma.jpg" alt=""></li>
       </ul>
     </div>
+    <div>
+    <h1> hola esto es una prueba para realizar en conotenido de esta página </h1> 
+  </div>
   </main>
 </body>
 </html>
